--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,7 @@ body {
   font-weight: 400;
   color: #332a33;
   line-height: 1.4;
+  background-color: #8164c0;
 }
 
 h1,
@@ -401,7 +402,7 @@ textarea {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: gray;
+  color: #fff;
   text-transform: uppercase;
 }
 
