--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -28,7 +28,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	color: gray;
+	color: $color-white;
 	text-transform: uppercase;
 }
 
