--- a/css/main.css
+++ b/css/main.css
@@ -540,10 +540,18 @@ textarea {
   padding-top: 87px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  min-height: 622px;
+}
+.intro__block {
+  background-color: #f2f2f2;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .intro__content {
+  min-height: 622px;
   padding: 75px 100px;
   background-color: #332a33;
   color: #fff;
@@ -564,6 +572,10 @@ textarea {
           align-items: start;
 }
 
+.intro-left {
+  position: relative;
+}
+
 .intro__title {
   margin-bottom: 35px;
 }
@@ -575,11 +587,6 @@ textarea {
   margin-bottom: 50px;
   font-family: "RobotoSlab-Regular", sans-serif;
   font-size: 14px;
-}
-
-.intro__block {
-  background-color: #f2f2f2;
-  position: relative;
 }
 
 /* ============================= */
